still running into the issue where the ears are positioned above the head despite having a lower z-index. Will attempt to manipulate the borders of the left ear to see if that does anything.

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@
     right:0;
     bottom:0;
     margin:auto;
-    z-index:2;
 }
 .bunny-left-ear{
     position:absolute;
@@ -22,10 +21,12 @@
     background-color:#fabdff;
     height:150px;
     width:50px;
-    border:1px solid #b87bbd;
+    border-left:20px solid transparent;
+    border-right:20px solid transparent;
+    border-bottom:20px solid #fabdff;
     border-radius:40%;
     transform:rotate(-10deg);
-    z-index:0;
+    z-index:1;
 }
 
 .bunny-right-ear{
@@ -38,7 +39,7 @@
     border:1px solid #b87bbd;
     border-radius:40%;
     transform:rotate(10deg);
-    z-index:0;
+    z-index:-1;
 }
 .bunny-left-eye{
     position:absolute;
